5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1708_3067.log
== TEST (2019-04-29 15:08:06) 
-- CODE:
N= input("tipos de ataque:"))
D1= int(input("pontos de vida:"))
D2= int(input("pontos de vida:"))
-- ERROR:
File "XXXX", line 1
    N= input())
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:08:14) 
-- CODE:
N= input("tipos de ataque:")
D1= int(input("pontos de vida:"))
D2= int(input("pontos de vida:"))
-- ERROR:
File "XXXX", line 1
    N= input())
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:10:33) 
-- CODE:
N= input("tipos de ataque:")
d1= int(input("pontos de vida:"))
d2= int(input("pontos de vida:"))
d4=int(input("pontos de vida:"))
if(N! ="Cauda")
-- ERROR:
File "XXXX", line 5
    if(N! ="Cauda")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:33) 
-- CODE:
x=input(int())
if(x!== "Espada:",+6):
-- ERROR:
File "XXXX", line 2
    if(x!== "Espada:",+6):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:56) 
-- CODE:
x=input(int("pontos de vida:"))
if(x!== "Espada:",+6):
-- ERROR:
File "XXXX", line 2
    if(x!== "Espada:",+6):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:14:57) 
-- CODE:
x=input(int("pontos de vida:"))
if(x!== "Espada:",+6):
-- EXECUTION TIME:
0.150695
-- ERROR:
  File "/home/codebench/codes/1708/3067/main.py", line 2
    if(x!== "Espada:",+6):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:14:58) 
-- CODE:
x=input(int("pontos de vida:"))
if(x!== "Espada:",+6):
-- ERROR:
File "XXXX", line 2
    if(x!== "Espada:",+6):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:31) 
-- CODE:
x=input(int("pontos de vida:"))
if(x!== "Espada:",x,","+6)
-- ERROR:
File "XXXX", line 2
    if(x!== "Espada:",x,","+6)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:15:33) 
-- CODE:
x=input(int("pontos de vida:"))
if(x!== "Espada:",x,","+6)
-- EXECUTION TIME:
0.17441
-- ERROR:
  File "/home/codebench/codes/1708/3067/main.py", line 2
    if(x!== "Espada:",x,","+6)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:54) 
-- CODE:
x=input(int("pontos de vida:"))
if(x!== "Espada: x+6")
-- ERROR:
File "XXXX", line 2
    if(x!== "Espada: x+6")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:15:55) 
-- CODE:
x=input(int("pontos de vida:"))
if(x!== "Espada: x+6")
-- EXECUTION TIME:
0.154117
-- ERROR:
  File "/home/codebench/codes/1708/3067/main.py", line 2
    if(x!== "Espada: x+6")
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:10) 
-- CODE:
x=input(int("pontos de vida:"))
if("Espada: x+6")
-- ERROR:
File "XXXX", line 2
    if("Espada: x+6")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:16:11) 
-- CODE:
x=input(int("pontos de vida:"))
if("Espada: x+6")
-- EXECUTION TIME:
0.151407
-- ERROR:
  File "/home/codebench/codes/1708/3067/main.py", line 2
    if("Espada: x+6")
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:38:18) 
-- CODE:
x=input(int("tipos de ataque:"))
n=("1","2",)
d
if("ESPADA:n+6")
elif("CAUDA:(d1+d2+d3*d4)")
print




print
-- EXECUTION TIME:
0.148895
-- ERROR:
  File "/home/codebench/codes/1708/3067/main.py", line 4
    if("ESPADA:n+6")
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:18) 
-- CODE:
x=input(int("tipos de ataque:"))
n=("1","2",)
d
if("ESPADA:n+6")
elif("CAUDA:(d1+d2+d3*d4)")
print




print
-- ERROR:
File "XXXX", line 4
    if("ESPADA:n+6")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:44) 
-- CODE:
x=input(int("tipos de ataque:"))
n=("1","2",)

if("ESPADA:n+6")
elif("CAUDA:(d1+d2+d3*d4)")






-- ERROR:
File "XXXX", line 4
    if("ESPADA:n+6")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
